src/context-menu/css/objects/_honeycomb.context-menu.objects.scss
.js-context-menu {
    position: relative;
}

.js-context-menu__list {
    @extend .list--bare;
    @extend .rounded;
    position: absolute;
    display: block; 
    overflow: hidden;
    min-width: 150px;
    top: 25px;
    left: 25px;
    transform: scale(0, 0);
    transform-origin: top left;
    z-index: 10;
    transition: transform 0.2s ease-in-out;
    background-color: #fff;
    box-shadow: 0 0 0px color('grey', 4); // blur at 0, invisible
    text-align: left;

    li {
        display: list-item;
        margin-bottom: 0;
    }

    a {
        @include padding(0.25);
        display: block;
        color: $hc-link-color;

        &:hover {
            color: #fff;
            background-color: $hc-link-hover-color;
        }
    }
}

.js-context-menu--open .js-context-menu__list {
    transform: scale(1, 1);
    box-shadow: 0 0 10px color('grey', 4);
}

.js-context-menu--right {
    .js-context-menu__list {
        text-align: right;
        transform-origin: top right;
    }
}

